[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Stand-alone filtering of signed Ethereum transactions against a (contract, selector) allow-set"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-tx"
repository  = "https://github.com/hoprnet/hoprnet"
version     = "0.4.0"

[lib]
crate-type = ["rlib"]

[dependencies]
alloy-sol-types = { workspace = true }
hex             = { workspace = true }
thiserror       = { workspace = true }

hopr-bindings = { workspace = true }
hopr-types    = { workspace = true, features = ["primitive"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
