[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "High-level Core-Ethereum functions that translate to on-chain transactions"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-chain-actions"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
prometheus = [
  "blokli-chain-rpc/prometheus",
  "blokli-db-sql/prometheus",
  "dep:hopr-metrics",
]
runtime-tokio = [
  "blokli-chain-rpc/runtime-tokio",
  "blokli-db-sql/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
  "node-bindings",
] }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
lazy_static = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

blokli-chain-rpc     = { workspace = true }
blokli-chain-types   = { workspace = true }
blokli-db-sql        = { workspace = true }
hopr-async-runtime   = { workspace = true }
hopr-bindings        = { workspace = true }
hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-metrics         = { workspace = true, optional = true }
hopr-platform        = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
hex-literal = { workspace = true }
mockall     = { workspace = true }
test-log    = { workspace = true }
tokio       = { workspace = true }

hopr-crypto-random = { workspace = true }
