[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Implements the main HOPR chain interface"
edition     = "2021"
license     = "GPL-3.0-only"
name        = "blokli-chain-api"
version     = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
prometheus = [
  "blokli-chain-actions/prometheus",
  "blokli-chain-indexer/prometheus",
  "blokli-chain-rpc/prometheus",
  "blokli-db/prometheus",
]
runtime-tokio = [
  "blokli-chain-actions/runtime-tokio",
  "blokli-chain-indexer/runtime-tokio",
  "blokli-db/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
] }
async-channel = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

blokli-chain-actions = { workspace = true }
blokli-chain-indexer = { workspace = true }
blokli-chain-rpc     = { workspace = true }
blokli-chain-types   = { workspace = true }
blokli-db            = { workspace = true }
hopr-async-runtime   = { workspace = true }
hopr-chain-config    = { workspace = true }
hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
blokli-db = { workspace = true, features = ["runtime-tokio"] }
tokio     = { workspace = true }
