[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Implements the main HOPR chain interface"
edition     = "2021"
license     = "GPL-3.0-only"
name        = "blokli-chain-api"
version     = "0.6.1"

[lib]
crate-type = ["rlib"]

[features]
default = []
prometheus = [
  "blokli-chain-indexer/prometheus",
  "blokli-chain-rpc/prometheus",
  "blokli-db/prometheus",
]
runtime-tokio = [
  "blokli-chain-indexer/runtime-tokio",
  "blokli-db/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]

[dependencies]
async-broadcast = { workspace = true }
async-trait     = { workspace = true }
chrono          = { workspace = true }
dashmap         = { workspace = true }
futures         = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
uuid            = { workspace = true }

blokli-api-types = { workspace = true }
blokli-chain-indexer = { workspace = true }
blokli-chain-rpc = { workspace = true }
blokli-chain-types = { workspace = true }
blokli-db = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-bindings = { workspace = true }
hopr-types = { workspace = true, features = [
  "crypto",
  "internal",
  "primitive",
] }


[dev-dependencies]
anyhow             = { workspace = true }
blokli-chain-types = { workspace = true }
blokli-db          = { workspace = true, features = ["runtime-tokio"] }
env_logger         = { workspace = true }
hex-literal        = { workspace = true }
insta              = { workspace = true }
rand               = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
