[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Core-Ethereum-specific interaction with the backend database"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0"
name        = "blokli-chain-indexer"
repository  = "https://github.com/hoprnet/hoprnet"
version     = "0.16.5"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = ["blokli-chain-rpc/runtime-tokio", "blokli-db/runtime-tokio"]
telemetry = [
  "blokli-chain-rpc/telemetry",
  "blokli-db/telemetry",
  "hopr-types/telemetry",
]

[dependencies]
async-broadcast   = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "xz-parallel"] }
async-lock        = { workspace = true }
async-tar         = { workspace = true }
async-trait       = { workspace = true }
backon            = { workspace = true, features = ["futures-timer-sleep"] }
chrono            = { workspace = true }
futures           = { workspace = true }
futures-util      = { workspace = true }
lazy_static       = { workspace = true }
multiaddr         = { workspace = true }
reqwest           = { workspace = true, features = ["brotli", "json", "stream", "zstd"] }
sea-orm           = { workspace = true }
smart-default     = { workspace = true }
sysinfo           = { workspace = true }
tempfile          = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true, features = ["io-util"] }
tracing           = { workspace = true }
url               = { workspace = true }

blokli-api-types = { workspace = true }
blokli-chain-rpc = { workspace = true }
blokli-chain-types = { workspace = true }
blokli-db = { workspace = true }
blokli-db-entity = { workspace = true }
hopr-bindings = { workspace = true }
hopr-types = { workspace = true, features = [
  "chain",
  "crypto",
  "internal",
  "primitive",
  "use-bindings",
] }

[dev-dependencies]
anyhow          = { workspace = true }
hex-literal     = { workspace = true }
mockall         = { workspace = true }
primitive-types = { workspace = true }
test-log        = { workspace = true }
tokio           = { workspace = true }

blokli-chain-rpc = { workspace = true, features = ["runtime-tokio"] }
blokli-db = { workspace = true, features = ["runtime-tokio"] }
hopr-types = { workspace = true, features = [
  "chain",
  "crypto",
  "internal",
  "primitive",
  "random",
  "use-bindings",
] }
