[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Core-Ethereum-specific interaction with the backend database"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-chain-types"
repository  = "https://github.com/hoprnet/hoprnet"
version     = "0.2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "contract",
  "node-bindings",
] }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
libp2p-identity = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-bindings        = { workspace = true }
hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hex = { workspace = true }

[features]
default = []
