[package]
description = "Contains all BLOKLI database entities"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-db-entity"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.1.0"

[features]
default = ["sqlite"]
runtime-tokio = [
  "sea-orm-cli/runtime-tokio-rustls",
  "sea-orm-migration/runtime-tokio-rustls",
  "sea-orm/runtime-tokio-rustls",
]
sqlite = []

[build-dependencies]
anyhow  = { workspace = true }
clap    = { workspace = true }
futures = { workspace = true }
# Override workspace sea-orm to add SQLite support for build script
sea-orm = { version = "1.1.14", default-features = false, features = [
  "debug-print",
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
sea-orm-cli = { workspace = true }
sea-orm-migration = { version = "1.1.14", default-features = false, features = [
  "cli",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-chrono",
] }
tokio = { workspace = true }

blokli-db-migration = { workspace = true }

[dependencies]
chrono    = { workspace = true }
sea-orm   = { workspace = true }
thiserror = { workspace = true }

hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }
