[package]
name = "blokli-db-migration"
description = "Contains database migrations for a BLOKLI database"
version = "0.1.0"
edition = "2021"
publish = false
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/blokli"
license = "GPL-3.0-only"


[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
sea-orm-migration = { workspace = true }

hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }
