[package]
description = "Contains database migrations for a BLOKLI database"
edition     = "2021"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-db-migration"
publish     = false
repository  = "https://github.com/hoprnet/blokli"
version     = "0.1.0"

[features]
default = ["sqlite"]
sqlite  = ["sea-orm-migration/sqlx-sqlite"]

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { workspace = true }
tokio             = { workspace = true }

hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true }
