[package]
edition = "2021"
name    = "blokli-integration-tests"
publish = false
version = "0.2.1"

[dependencies]
anyhow = { workspace = true }
blokli-client = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eventsource-client = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
hex = { workspace = true }
hopli = { workspace = true }
hopr-bindings = { workspace = true }
hopr-types = { workspace = true, features = [
  "chain",
  "crypto",
  "internal",
  "primitive",
] }
insta = { workspace = true, features = ["redactions", "yaml"] }
libc = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hopli"]
