[package]
edition = "2021"
name    = "blokli-integration-tests"
publish = false
version = "0.1.3"

[dependencies]
anyhow               = { workspace = true }
blokli-client        = { path = "../../client" }
chrono               = { workspace = true }
clap                 = { workspace = true, features = ["derive"] }
eventsource-client   = { workspace = true }
futures              = { workspace = true }
futures-time         = { workspace = true }
hex                  = { workspace = true }
hopli                = { workspace = true }
hopr-bindings        = { workspace = true }
hopr-chain-connector = { workspace = true, features = ["runtime-tokio"] }
hopr-chain-types     = { workspace = true }
hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }
libc                 = { workspace = true }
rand                 = { workspace = true }
reqwest              = { workspace = true }
rstest               = { workspace = true }
semver               = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
serial_test          = { workspace = true }
test-log             = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
url                  = { workspace = true }
uuid                 = { workspace = true }
