[package]
edition = "2021"
name    = "blokli-integration-tests"
publish = false
version = "0.4.2"

[dependencies]
anyhow = { workspace = true }
blokli-client = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures-time = { workspace = true }
hex = { workspace = true }
hopli = { workspace = true }
hopr-bindings = { workspace = true }
hopr-types = { workspace = true, features = [
  "chain",
  "crypto",
  "internal",
  "primitive",
] }
libc = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
eventsource-client = { workspace = true }
futures            = { workspace = true }
insta              = { workspace = true, features = ["redactions", "yaml"] }
semver             = { workspace = true }
serial_test        = { workspace = true }
test-log           = { workspace = true }
uuid               = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hopli"]
